ubsan: shenandoahFreeSet.cpp:1347:24: runtime error: division by zero

XMLWordPrintable

    • gc
    • b08
    • x86
    • linux

        When running with ubsan-enabled binaries, the test
        gc/shenandoah/oom/TestAllocLargeObj.jtr
        reports this issue :

        src/hotspot/share/gc/shenandoah/shenandoahFreeSet.cpp:1347:24: runtime error: division by zero
            #0 0x7fc1d3ec6ec7 in ShenandoahFreeSet::internal_fragmentation() src/hotspot/share/gc/shenandoah/shenandoahFreeSet.cpp:1347
            #1 0x7fc1d6f4a516 in ShenandoahMetricsSnapshot::snap_before() src/hotspot/share/gc/shenandoah/shenandoahMetrics.cpp:37
            #2 0x7fc1d6e39c95 in ShenandoahDegenGC::op_degenerated() src/hotspot/share/gc/shenandoah/shenandoahDegeneratedGC.cpp:86
            #3 0x7fc1d6e3b1e8 in ShenandoahDegenGC::entry_degenerated() src/hotspot/share/gc/shenandoah/shenandoahDegeneratedGC.cpp:74
            #4 0x7fc1d6fde7cb in VM_ShenandoahDegeneratedGC::doit() src/hotspot/share/gc/shenandoah/shenandoahVMOperations.cpp:84
            #5 0x7fc1d75dd0dd in VM_Operation::evaluate() src/hotspot/share/runtime/vmOperations.cpp:75
            #6 0x7fc1d75eba41 in VMThread::evaluate_operation(VM_Operation*) src/hotspot/share/runtime/vmThread.cpp:283
            #7 0x7fc1d75eda4f in VMThread::inner_execute(VM_Operation*) src/hotspot/share/runtime/vmThread.cpp:427
            #8 0x7fc1d75ee5b9 in VMThread::loop() src/hotspot/share/runtime/vmThread.cpp:493
            #9 0x7fc1d75ee6a7 in VMThread::run() src/hotspot/share/runtime/vmThread.cpp:177
            #10 0x7fc1d737e6ca in Thread::call_run() src/hotspot/share/runtime/thread.cpp:225
            #11 0x7fc1d69ca311 in thread_native_entry src/hotspot/os/linux/os_linux.cpp:846
            #12 0x7fc1dc7846e9 in start_thread (/lib64/libpthread.so.0+0xa6e9) (BuildId: 2f8d3c2d0f4d7888c2598d2ff6356537f5708a73)
            #13 0x7fc1dbd1550e in clone (/lib64/libc.so.6+0x11850e) (BuildId: f732026552f6adff988b338e92d466bc81a01c37)

              Assignee:
              William Kemper
              Reporter:
              Matthias Baesken
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: