8333728: ubsan: shenandoahFreeSet.cpp:1347:24: runtime error: division by zero

Reviewed-by: mdoerr, lucy
Backport-of: b5575942027281166676678e2081b024ec572644